--- a/ATBM_Project/ATBM_Project.csproj
+++ b/ATBM_Project/ATBM_Project.csproj
@@ -143,6 +143,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapQuyenRole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CapQuyenRole.Designer.cs">
+      <DependentUpon>CapQuyenRole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CapQuyenUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CapQuyenUser.Designer.cs">
+      <DependentUpon>CapQuyenUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CapRoleUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CapRoleUser.Designer.cs">
+      <DependentUpon>CapRoleUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="DangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,8 +173,20 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhanQuyen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhanQuyen.Designer.cs">
+      <DependentUpon>PhanQuyen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControl1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControl1.Designer.cs">
+      <DependentUpon>UserControl1.cs</DependentUpon>
+    </Compile>
     <Compile Include="XemQuyen_Role.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,11 +199,23 @@
     <Compile Include="XemQuyen_User.Designer.cs">
       <DependentUpon>XemQuyen_User.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CapQuyenRole.resx">
+      <DependentUpon>CapQuyenRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CapQuyenUser.resx">
+      <DependentUpon>CapQuyenUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CapRoleUser.resx">
+      <DependentUpon>CapRoleUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhanQuyen.resx">
+      <DependentUpon>PhanQuyen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
